precompiles/utils/macro/tests/precompile/compile-fail/handle/wrong-type.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/handle/wrong-type.rs:23:18
   |
23 |     fn foo(_handle: u32) {
   |                     ^^^
